# even-app-one

./: .gitignore  CLAUDE.md  LICENSE  Plans.md  README.md  orca.yaml  package.json
app/: README.md  app.json  biome.json  index.html  package.json  vite.config.ts
app/preview/: design-mock.html  index.html
app/src/: App.tsx  app.css  main.ts
app/tools/: render-screens.ts
apps/g2hermes/: .gitignore  app.json  biome.json  index.html  package.json  vite.config.ts
apps/hisho/: .gitignore  app.json  biome.json  package.json  vite.config.ts
apps/imu-lab/: .gitignore  README.md  app.json  biome.json  index.html  package.json  vite.config.ts
apps/ui-lab/: app.json  index.html  package.json  vite.config.ts
docs/: README.md
docs/ai-tooling/: claude-code.md  even-terminal.md  skill-catalog.md
docs/community/: resources.md
docs/getting-started/: 01-overview.md  02-installation.md  03-first-app.md  04-architecture.md
docs/guides/: 01-page-lifecycle.md  02-input-events.md  03-display-ui.md  04-device-apis.md  05-design-guidelines.md  06-networking.md  07-headless-testing.md
docs/plans/: g2-hermes-bridge-phase0-1.md  g2-hermes-phase2-3.md  hisho-cards-version.md  (+4 more)
servers/g2-hermes-stt/: .gitignore  README.md  pyproject.toml
servers/g2-hermes-stt/deploy/: com.frogman.g2hermes-stt.plist
servers/g2-hermes-stt/src/g2_hermes_stt/: __init__.py  __main__.py  audio.py  server.py  text.py  transcribe.py  whisper.py
servers/g2-hermes-stt/tests/: conftest.py  test_audio.py  test_main.py  test_server.py  test_smoke.py  test_text.py  test_transcribe.py  test_whisper.py
(+177 files in other folders)
