[project]
name = "g2-hermes-stt"
version = "0.1.0"
description = "Even G2 Hermes Bridge — local STT sidecar (mlx-whisper, loopback-only)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# 実推論エンジン。Apple Silicon の Mac B でのみ必要。
# ピュア関数テスト / ruff には不要なので extra に分離する（mlx は重く Apple Silicon 限定）。
inference = [
    "mlx-whisper>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/g2_hermes_stt"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
